Updated models and controllers. Additional APIs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,28 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=
-#spring.datasource.password=
-#spring.datasource.url=jdbc:mysql://cln-ra-do-user-6485743-0.b.db.ondigitalocean.com:3306/cln_ra?createDatabaseIfNotExist=true
 
 
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/arim?createDatabaseIfNotExist=true
+spring.datasource.username=admin_ra
+spring.datasource.password=AndyDCG*&9D
+spring.datasource.url=jdbc:mysql://rasa.mysql.database.azure.com:3306/rasac?useSSL=true&createDatabaseIfNotExist=true
+
+
+
+
+#spring.datasource.username=yoki
+#spring.datasource.password=Ssteve123!
+#spring.datasource.url=jdbc:mysql:// localhost:3306/arims?createDatabaseIfNotExist=true&sslmode=REQUIRED
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+uploadDir=/resources
+
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
 
 
 
